==> picoruby/picoruby/mrbgems/picoruby-filesystem-fat/ports/rp2040/sd_disk.c <==
#include <pico/stdlib.h>
#include <hardware/spi.h>
#include "disk.h"
#define PICORUBY_SPI_RP2040_SPI0      spi0
#define PICORUBY_SPI_RP2040_SPI1      spi1
#define FCLK_FAST() { }
#define FCLK_SLOW() { }
#define CS_HIGH()   { gpio_put(SPI_CS_PIN, 1); /* HIGH */ }
#define CS_LOW()    { gpio_put(SPI_CS_PIN, 0); /* LOW */ }
#define MMC_CD      1 /* Card detect (yes:true, no:false, default:true) */
#define MMC_WP      0 /* Write protected (yes:true, no:false, default:false) */

int
FAT_set_spi_unit(const char* name, int sck, int cipo, int copi, int cs)
{
  if (strcmp(name, "RP2040_SPI0") == 0) {
    SPI_UNIT = PICORUBY_SPI_RP2040_SPI0;
  } else if (strcmp(name, "RP2040_SPI1") == 0) {
    SPI_UNIT = PICORUBY_SPI_RP2040_SPI1;
  } else {
    return -1;
  }
  SPI_SCK_PIN  = sck;
  SPI_CIPO_PIN = cipo;
  SPI_COPI_PIN = copi;
  SPI_CS_PIN   = sc;
  return 0;
}

static BYTE
xchg_spi(
  BYTE dat    /* Data to send */
)
{
  uint8_t  src, dst;
  src = dat;
  spi_write_read_blocking( SPI_UNIT, &src, &dst, 1 );
  return  (BYTE)dst;
}

static void
rcvr_spi_multi(
  BYTE *buff,     /* Pointer to data buffer */
  UINT btr        /* Number of bytes to receive (even number) */
)
{
  spi_read_blocking( SPI_UNIT, 0xff, buff, btr );
}

static void
xmit_spi_multi(
  const BYTE *buff,   /* Pointer to the data */
  UINT btx            /* Number of bytes to send (even number) */
)
{
  spi_write_blocking( SPI_UNIT, buff, btx );
}
